# jfc

./: README.md  pyproject.toml
src/: scaffold_analysis.py
src/conventions/: postprocess_tex.py
