[project]
name = "slopspec"
version = "0.1.0"
description = "slopspec — LLM-driven HEP analysis specification."
requires-python = ">=3.11"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.11"
pyyaml = ">=6.0"
rich = ">=13.0"

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]
scaffold = "python src/scaffold_analysis.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "T201"]
